cropper: fixed empty logo case

--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -79,6 +79,7 @@
       font-size: 14px;
       font-weight: 500;
       margin-left: 8px;
+      text-transform: uppercase;
     }
 
     &:first-child {
