--- a/src/styles/renderer.less
+++ b/src/styles/renderer.less
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    transition: opacity 250ms;
   }
 
   img#rendererOutput {
